# Rnai-CLI

./: LICENSE  README.md  ainews.md  install.sh  pyproject.toml
rnai_cli/: agent.py  auth.py  config.py  history.py  main.py  providers.py  templates.py  tools.py  ui.py  worker.py
rnai_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
